Use SPDX license identifiers
This patch is inspired by a similar change in U-Boot. Replacing
license headers with SPDX license identifier eases the generation
of license clearing reports.

See the Software Package Data Exchange for details:

  http://spdx.org

Signed-off-by: Christophe Vu-Brugier <cvubrugier@yahoo.fr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
+#
+# (C) Copyright 2013
+# Christophe Vu-Brugier <cvubrugier@yahoo.fr>
+#
+# SPDX-License-Identifier:	GPL-2.0+
+#
+
 include_directories(".")
 
 add_library(ccan STATIC
