--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,10 @@
+#
+# (C) Copyright 2013
+# Christophe Vu-Brugier <cvubrugier@yahoo.fr>
+#
+# SPDX-License-Identifier:	GPL-2.0+
+#
+
 project(target-isns "C")
 
 cmake_minimum_required(VERSION 2.8)
