Add a "make dist" target
The `git archive` command is used to create a tarball compressed with `xz`.

  http://agateau.com/2009/08/09/cmake-and-make-dist-the-simple-version/

Signed-off-by: Christophe Vu-Brugier <cvubrugier@yahoo.fr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,16 @@
 #
 
 project(target-isns "C")
+set(PROJECT_VERSION "0.1")
 
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -std=c99")
 
 add_subdirectory(src)
 install(FILES target-isns.conf DESTINATION /etc/)
+
+set(ARCHIVE_NAME ${CMAKE_PROJECT_NAME}-${PROJECT_VERSION})
+add_custom_target(dist
+  COMMAND git archive --prefix=${ARCHIVE_NAME}/ HEAD
+  | xz > ${CMAKE_BINARY_DIR}/${ARCHIVE_NAME}.tar.xz
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
