--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,5 @@ project(target-isns "C")
 
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -std=c99")
+
+add_subdirectory(src)
