Add the target-isns program
This program is an iSNS client that runs as a service. At startup, it
registers the iSCSI targets to an iSNS server. It then monitors the
configfs file system for iSCSI targets being added, removed or
modified and send the changes to the iSNS server.

Signed-off-by: Christophe Vu-Brugier <cvubrugier@yahoo.fr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,13 @@ include_directories(".")
 add_library(ccan STATIC
   ccan/daemonize/daemonize.c
   ccan/list/list.c)
+
+add_executable(target-isns
+  configfs.c
+  isns.c
+  log.c
+  util.c
+  target-isns.c)
+target_link_libraries(target-isns
+  ccan)
+install(TARGETS target-isns RUNTIME DESTINATION bin)
