Add `test-isns-fuzzing`, a tool to perform fuzz testing
The `test-isns-fuzzing` utility reads an iSNS PDU from the standard
input and invokes the same function that `target-isns` uses to handle
the iSNS PDUs it receives.

This program can be invoked by a fuzzer to perform fuzz testing. One
such fuzzer is "American fuzzy lop" (afl-fuzz).

The "documentation/fuzzing.md" file explains how to use `afl-fuzz`
and `test-isns-fuzzing`.

Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ if (SUPPORT_SYSTEMD)
   install(FILES target-isns.service DESTINATION /usr/lib/systemd/system/)
 endif (SUPPORT_SYSTEMD)
 
+add_subdirectory(tests)
+
 set(ARCHIVE_NAME ${CMAKE_PROJECT_NAME}-${PROJECT_VERSION})
 add_custom_target(dist
   COMMAND git archive --prefix=${ARCHIVE_NAME}/ HEAD
