Make configfs-iscsi-path configurable
Provide an alternate configfs-iscsi-path for testing varied configs.

Add the configfs_iscsi_path field to target-isns.conf as well as
the new command line options -s and --configfs-iscsi-path.

Signed-off-by: Kyle Fortin <kyle.fortin@oracle.com>

--- a/target-isns.conf
+++ b/target-isns.conf
@@ -11,3 +11,6 @@
 # Log verbosity: info, debug.
 # This parameter is optional.
 # log_level = info
+
+# Configfs path for iscsi.
+# configfs_iscsi_path = /sys/kernel/config/target/iscsi
