Give example of an IP6 address for the "isns_server" parameter
Use 2001:db8::1 as the sample IPv6 address since the 2001::db8 prefix
is reserved for documentation (RFC 3849).

Also change the sample IPv4 address to 192.0.2.1 since the block
192.0.2.0/24 is reserved for documentation (RFC 5737).

Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/target-isns.conf
+++ b/target-isns.conf
@@ -1,10 +1,12 @@
 # Sample configuration file for target-isns.
 
-# IP address of the iSNS server.
+# Hostname or IP address of the iSNS server.
+# IPv4 and IPv6 are supported.
 # This parameter is required.
-# isns_server = 192.168.0.1
+# isns_server = 2001:db8::1
+# isns_server = 192.0.2.1
 
-# Remote port of iSNS server.
+# Port number of the iSNS server.
 # This parameter is optional.
 # isns_port = 3205
 
